basic functionality, but need to fix some stupid z-index issues and make sure it is more multi-screen responsive

--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,16 @@ html {
   font-family: monospace;
   color: white;
   background-color: #000000;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .title {
   font-weight: 700;
   font-size: 2vw;
   color: aqua;
+  z-index: 11;
 }
 
 .textbox {
@@ -15,7 +19,7 @@ html {
   position: absolute;
   top: 15vw;
   left: 5vw;
-  z-index: 200;
+  z-index: 20;
 }
 
 #moon-data {
@@ -68,10 +72,17 @@ html {
   padding: 5vw;
   width: 50vw;
   border-radius: 50%;
-  z-index: 100;
+  z-index: 10;
   top: 2.5vw;
   visibility: hidden;
   animation: moon-cover 1.5s;
+  clear: both;
+  display: inline-block;
+}
+
+.moon-cover-container {
+  clear: both;
+  display: inline-block;
 }
 
 @keyframes moon-cover {
@@ -201,20 +212,6 @@ html {
 
   .asciimoon {
     font-size: 0.75vw;
-  }
-
-  #moon-cover {
-    height: 60vw;
-    width: 40vw;
-  }
-
-  @keyframes moon-cover {
-    from {
-      width: 0vw;
-    }
-    to {
-      width: 40vw;
-    }
   }
 
   #moon-data {
